# hft-middleware-shoppinglist

./: README.md
.github/workflows/: build-service.yml  build-ui.yml
shoppinglist-infra/: docker-compose-local.yml  docker-compose.yml
shoppinglist-service/: Dockerfile  pyproject.toml
shoppinglist-service/shoppinglist/shoppinglist/: asgi.py  settings.py  urls.py  wsgi.py
shoppinglist-service/src/: database.py  main.py
shoppinglist-service/src/controller/: item_routes.py
shoppinglist-service/src/models/: item.py
shoppinglist-service/src/schemas/: item_schema.py
shoppinglist-service/src/service/: item_service.py
shoppinglist-ui/: Dockerfile  README.md  package-lock.json  package.json
shoppinglist-ui/src/api/: api.ts
shoppinglist-ui/src/components/: AddItemForm.vue  Shoppinglist.vue
shoppinglist-ui/src/plugins/: vuetify.ts
shoppinglist-ui/src/router/: index.ts
shoppinglist-ui/src/views/: HomeView.vue  ShoppinglistView.vue
shoppinglist_service/: manage.py
shoppinglist_service/shoppinglist_service/: asgi.py  settings.py  urls.py  wsgi.py
