[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Marcel Henning <marcel.henning@adesso.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
