[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Marcel Henning <marcel.henning@adesso.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
schemas = "^0.7.1"
pydantic = "^2.5.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
